--- a/package.json
+++ b/package.json
@@ -12,38 +12,37 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.0",
     "date-fns": "^3.0.0",
-    "expo": "~54.0.6",
-    "expo-device": "~6.0.2",
-    "expo-location": "~17.0.1",
-    "expo-notifications": "~0.28.1",
-    "expo-secure-store": "~13.0.1",
+    "expo": "^54.0.19",
+    "expo-device": "~8.0.9",
+    "expo-location": "~19.0.7",
+    "expo-notifications": "^0.32.12",
+    "expo-secure-store": "~15.0.7",
     "expo-status-bar": "^3.0.8",
-    "react": "18.2.0",
+    "react": "^19.1.0",
     "react-hook-form": "^7.49.0",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-maps": "1.14.0",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "~3.31.1",
-    "react-native-svg": "15.2.0",
+    "react-native": "^0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-maps": "^1.20.1",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.12.1",
     "yup": "^1.7.1",
     "zod": "^3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@testing-library/react-native": "^12.4.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "~19.1.10",
     "babel-preset-expo": "^54.0.5",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.1",
-    "react-test-renderer": "^18.2.0",
+    "jest-expo": "~54.0.13",
     "typescript": "^5.1.3"
   },
   "private": true
