--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
@@ -24,8 +25,9 @@
     "expo-notifications": "^0.32.12",
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "^3.0.8",
-    "react": "^19.1.0",
+    "react": "19.2.0",
     "react-hook-form": "^7.49.0",
+    "react-test-renderer": "19.2.0",
     "react-native": "^0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-maps": "^1.20.1",
