--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
+    "build:dev:android": "eas build --profile development --platform android",
+    "build:dev:ios": "eas build --profile development --platform ios",
+    "build:dev": "eas build --profile development --platform all",
     "test": "jest",
     "lint": "eslint ."
   },
@@ -20,14 +23,14 @@
     "axios": "^1.6.0",
     "date-fns": "^3.0.0",
     "expo": "^54.0.19",
+    "expo-dev-client": "~6.0.16",
     "expo-device": "~8.0.9",
     "expo-location": "~19.0.7",
     "expo-notifications": "^0.32.12",
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "^3.0.8",
-    "react": "19.2.0",
+    "react": "19.1.0",
     "react-hook-form": "^7.49.0",
-    "react-test-renderer": "19.2.0",
     "react-native": "^0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-maps": "^1.20.1",
@@ -35,6 +38,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.12.1",
+    "react-test-renderer": "19.1.0",
     "yup": "^1.7.1",
     "zod": "^3.22.0"
   },
